--- a/frontend/src/styles/main.scss
+++ b/frontend/src/styles/main.scss
@@ -60,7 +60,24 @@ body{
     height: auto; 
   }
   
-  
+  .typestyle ul {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr); 
+    grid-gap: 16px;                        
+    padding: 0;                            
+    list-style-type: none;                 
+}
+.typestyle li {
+  background: #f0f0f0; 
+  text-align: center;   
+  padding: 8px;        
+  border: 1px solid #ccc; 
+}
+
+.pokemon-type-list a {
+  text-decoration: none;  
+  color: #333;            
+}
   
   
   .normal{
