--- a/frontend/src/styles/main.scss
+++ b/frontend/src/styles/main.scss
@@ -68,6 +68,7 @@ body{
     list-style-type: none;                 
 }
 .typestyle li {
+  background: #f0f0f0; 
   text-align: center;   
   padding: 8px;        
   border: 1px solid #ccc; 
@@ -77,95 +78,62 @@ body{
   text-decoration: none;  
   color: #333;            
 }
-
-
-
-$normal-color: #dce1e6;
-$fighting-color:#f0c3d0;
-$flying-color: #dce4f4;
-$poison-color: #e6caf2;
-$ground-color:#f2c8b4;
-$rock-color: #f7eed4;
-$bug-color: #eaf4d3;
-$ghost-color: #d0d9f4;
-$steel-color: #d4edf7;
-$fire-color: #f4d5bf;
-$water-color: #cbe1f9;
-$grass-color: #cdf9c8;
-$electric-color: #f4eab8;
-$psychic-color: #f2c2c4;
-$ice-color: #d6f9f3;
-$dragon-color: #c6dff4;
-$dark-color: #d3cae3;
-$fairy-color: #f9dbf6;
+  
+  
   .normal{
-    background-color: $normal-color;
+    background-color: #dce1e6;
   }
   .fighting{
-    background-color: $fighting-color;
+    background-color: #f0c3d0;
   }
   .flying{
-    background-color: $flying-color;
+    background-color: #dce4f4;
   }
   .poison{
-    background-color: $poison-color;
+    background-color: #e6caf2;
   }
   .ground{
-    background-color:$ground-color;
+    background-color: #f2c8b4;
   }
-  .rock {
-    background-color: $rock-color;
+  .rock{
+    background-color: #f7eed4;
   }
-  
-  .bug {
-    background-color: $bug-color;
+  .bug{
+    background-color: #eaf4d3;
   }
-  
-  .ghost {
-    background-color: $ghost-color;
+  .ghost{
+    background-color: #d0d9f4;
   }
-  
-  .steel {
-    background-color: $steel-color;
+  .steel{
+    background-color: #d4edf7;
   }
-  
-  .fire {
-    background-color: $fire-color;
+  .fire{
+    background-color: #f4d5bf;
   }
-  
-  .water {
-    background-color: $water-color;
+  .water{
+    background-color: #cbe1f9;
   }
-  
-  .grass {
-    background-color: $grass-color;
+  .grass{
+    background-color: #cdf9c8;
   }
-  
-  .electric {
-    background-color: $electric-color;
+  .electric{
+    background-color: #f4eab8;
   }
-  
-  .psychic {
-    background-color: $psychic-color;
+  .psychic{
+    background-color: #f2c2c4;
   }
-  
-  .ice {
-    background-color: $ice-color;
+  .ice{
+    background-color: #d6f9f3;
   }
-  
-  .dragon {
-    background-color: $dragon-color;
+  .dragon{
+    background-color: #c6dff4;
   }
-  
-  .dark {
-    background-color: $dark-color;
+  .dark{
+    background-color: #d3cae3;
   }
-  
-  .fairy {
-    background-color: $fairy-color;
+  .fairy{
+    background-color: #f9dbf6;
   }
-  
-  .unknown,
-  .shadow {
+  .unknown, .shadow{
     visibility: hidden;
   }
