--- a/frontend/src/styles/main.scss
+++ b/frontend/src/styles/main.scss
@@ -43,6 +43,9 @@ body {
   padding: 10px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 
+
+  
+
   img {
     width: 100%;
     height: auto;
@@ -113,6 +116,8 @@ body {
   }
 }
 
+
+
 // Type-specific styles
 .normal { background-color: #dce1e6; }
 .fighting { background-color: #f0c3d0; }
@@ -138,3 +143,24 @@ body {
   visibility: hidden;
 }
   
+
+.typestyle ul {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr); /* Creates 3 columns */
+  gap: 20px;
+}
+
+.typestyle li {
+  background-color: #f4f4f4;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  padding: 20px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  text-align: center;
+  margin: 10px;
+}
+
+.typestyle li img {
+  width: 100px;
+  height: auto;
+}
