header img for type
brukte samme metode som mapingen for å sette på iconsene på typene inn i headeren på type slik at for hver type så henter den den riktige iconen som tilhører den også hentet pokemon id for pokemonene

--- a/frontend/src/styles/main.scss
+++ b/frontend/src/styles/main.scss
@@ -142,11 +142,19 @@ body {
 .shadow {
   visibility: hidden;
 }
-  
+
+.type_header h1 {
+  color: black;
+}
+
+.type_header_img{
+  width: 50px;
+  height: auto;
+}
 
 .typestyle ul {
   display: grid;
-  grid-template-columns: repeat(3, 1fr); /* Creates 3 columns */
+  grid-template-columns: repeat(3, 1fr); 
   gap: 20px;
 }
 
@@ -164,3 +172,5 @@ body {
   width: 100px;
   height: auto;
 }
+
+
