Forbedret justering og avstand i header menu for bedre lesbarhet og design i main.scss
Justeringer av stiler:

Brukt margin-right: 14px i .menu-item-klassen for å kontrollere og redusere avstanden mellom menyelementene i toppteksten.
Brukt &:last-child-velgeren i .menu-item for å sikre at det ikke er noen ekstra margin på det siste menyelementet, noe som gir et renere utseende.

Generelle forbedringer:

Forbedret visuell justering og konsistens i hele toppmenyen.
Forenklet fremtidige justeringer og vedlikehold ved hjelp av SCSS-nestet styling.

--- a/frontend/src/styles/main.scss
+++ b/frontend/src/styles/main.scss
@@ -11,17 +11,17 @@ body {
 .header {
   color: #000000;
   text-align: center;
-  padding: 10px;
+  padding: 20px;
   display: flex;
   justify-content: space-between;
   align-items: center;
 
-  .menu {
-    display: flex;
+  .menu-item {
+    margin-right: 14rem;
 
-    .menu-button {
-      margin-right: 10px;
-    }
+    &:last-child {
+      margin-right: 0;
+    } 
   }
   
 }
