Forbedret søkeinput-styling for å fjerne standard kantlinje og outline og justerte placeholder-styling for bedre brukeropplevelse.
Denne klassen definerer stilen for input-feltet ved å fjerne standardrammer og konturer, legge til polstring, tillate fleksibel bredde, og sette skriftstørrelse, tekstfarge og bakgrunnsfarge.

Denne stilen setter fargen på plassholderteksten i input-feltet for å gjøre den mer synlig og estetisk tiltalende.

--- a/frontend/src/styles/main.scss
+++ b/frontend/src/styles/main.scss
@@ -36,6 +36,22 @@ body {
   margin: 20px auto;
   background-color: #fff;
 
+
+  .search-input {
+    border: none;
+    outline: none;
+    padding: 10px;
+    flex-grow: 1;
+    font-size: 16px;
+    border-radius: 25px;
+    color: #333;
+    background-color: transparent;
+    
+    &::placeholder {
+      color: #999;
+    }
+  }
+
   
 }
 .featured-pokemon {
