--- a/frontend/src/styles/main.scss
+++ b/frontend/src/styles/main.scss
@@ -36,7 +36,6 @@ body {
   margin: 20px auto;
   background-color: #fff;
 
-
   .search-input {
     border: none;
     outline: none;
@@ -51,6 +50,7 @@ body {
       color: #999;
     }
   }
+
   .search-button {
     background: none;
     border: none;
@@ -68,9 +68,61 @@ body {
     }
   }
 
+  @media (max-width: 1024px) {
+    max-width: 90%;
+    padding: 5px 8px;
 
-  
+    .search-input {
+      font-size: 14px;
+      padding: 8px;
+    }
+
+    .search-button .search-icon {
+      width: 20px;
+      height: 20px;
+    }
+  }
+
+  @media (max-width: 768px) {
+    max-width: 95%;
+    padding: 4px 6px;
+
+    .search-input {
+      font-size: 13px;
+      padding: 7px;
+    }
+
+    .search-button .search-icon {
+      width: 18px;
+      height: 18px;
+    }
+  }
+
+  @media (max-width: 480px) {
+    flex-direction: column;
+    align-items: stretch;
+    max-width: 100%;
+    padding: 5px;
+
+    .search-input {
+      padding: 10px;
+      font-size: 14px;
+      margin-bottom: 5px;
+      border-radius: 20px;
+    }
+
+    .search-button {
+      margin-left: 0;
+      align-self: center;
+
+      .search-icon {
+        width: 22px;
+        height: 22px;
+      }
+    }
+  }
 }
+
 .featured-pokemon {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
