Oppdaterte Class namet for å importere stilene

--- a/frontend/src/styles/teams.scss
+++ b/frontend/src/styles/teams.scss
@@ -6,7 +6,7 @@
     align-items: center;
     padding: 20px;
   }
-  .teams-section h2{
+  .teams-link-text{
     color: black;
   }
   .team-image, .pokemon-image {
